--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#">Our Story</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#">Contact</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
@@ -40,9 +40,7 @@
           </div>
         </div>
       </nav>
-    <h1>Welcome to Jungle Bliss</h1>
-
-    <h3>Answer to healthy and refreshed Natural hair </h3>
+    
 
     <Footer>
         <i class="fab fa-instagram"></i>
