--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
           </div>
         </div>
       </nav>
-    
+    <div>
+       <img src="images/Homepage image.jpg" alt="Homepage-image"> 
+    </div>
 
     <Footer>
         <i class="fab fa-instagram"></i>
