footer social media icons

--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
     </div>
 
     <Footer>
+        <div></div>
         <i class="fab fa-instagram"></i>
+        <i class="fa-brands fa-square-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
+    </div>
     </Footer>
     
 </body>
