--- a/ourStory.html
+++ b/ourStory.html
@@ -28,10 +28,10 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Our Story</a>
+                <a class="nav-link" href="#/ourStory.html">Our Story</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="#/Contact">Contact</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
