--- a/ourStory.html
+++ b/ourStory.html
@@ -25,13 +25,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="ourStory.html">Our Story</a>
+                <a class="nav-link" href="#">Our Story</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#/Contact">Contact</a>
+                <a class="nav-link" href="/contact.html">Contact</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
