css-ourstory-img update

--- a/ourStory.html
+++ b/ourStory.html
@@ -41,18 +41,18 @@
           </div>
         </div>
       </nav>
-    <div>
-       <img src="images/Onlineshop open today.png"  class="max-width"alt="onlineshop now open image"> 
+    <div class="onlineshop-top">
+       <img src="images/Onlineshop open today.png"  class="ourStory-img1 rounded shadow"alt="onlineshop now open image"> 
     </div>
-    <div class="row mt-5 mb-3">
+    <div class="row mt-5 mb-3 px-3">
         <div class="col-sm-4">
-          <img src="images/Cloves Flavour.png" class="img-fluid rounded img-display" alt="cloves flavor">
+          <img src="images/Cloves Flavour.png" class="img-fluid rounded img-display shadow" alt="cloves flavor">
         </div>
         <div class="col-sm-4">
-          <img src="images/vanilla flavour.png" class="img-fluid rounded img-display" alt="vanilla flavor">
+          <img src="images/vanilla flavour.png" class="img-fluid rounded img-display shadow" alt="vanilla flavor">
         </div>
         <div class="col-sm-4">
-          <img src="images/Rosemary  flavour 200ml.png" class=" img-fluid rounded img-display" alt="Rosemary flavor">
+          <img src="images/Rosemary  flavour 200ml.png" class=" img-fluid rounded img-display shadow" alt="Rosemary flavor">
         </div>
   </div>
     <Footer>
